[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown_helper"
version = "1.0.2"
authors = [
    { name="Arttu Mahlakaarto", email="arttu.mahlakaarto@gmail.com" },
]
description = "A simple markdown helper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.packages]
markdown_helper = "src/markdown_helper"

[project.urls]
homepage = "https://github.com/amahlaka/python-markdown-helper"
bug-tracker = "https://github.com/amahlaka/python-markdown-helper/issues"